--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Rocket_Elevators_Customer_Portal;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthDbContextConnection": "Server=students-projects.cq6zrczewpu2.us-east-1.rds.amazonaws.com;Database=EricMoran;User Id=codeboxx;Password=Codeboxx1!;"
   }
 }
